--- a/job/static/employerprofile.css
+++ b/job/static/employerprofile.css
@@ -3,7 +3,7 @@ body{
 }
 .linkbox{
     background-color: #fff;
-    position: relative;
+    position: fixed;
     top: 87px;
     width: 350px;
     height: 700px;
@@ -19,7 +19,7 @@ body{
     left: 426px;
     background-color: #fff;
     position: relative;
-    top: 46px;
+    top: 825px;
     border-radius: 10px;
 
 
