--- a/job/templates/employerprofile.html
+++ b/job/templates/employerprofile.html
@@ -60,8 +60,9 @@
         <div class="row"> 
             <div class="col employer-name">
                 <h3 class="sub-heading2">About company</h3>
-                <input type="text" id="name" minlength="4" maxlength="15" required />
-            </div>
+                <textarea type="text" id="name" minlength="4" maxlength="550" required >
+          </textarea>
+          </div>
             
         </div>
         </div>
