--- a/job/templates/navbar2.html
+++ b/job/templates/navbar2.html
@@ -44,7 +44,7 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                  
-                  <li><a class="dropdown-item" href="{%url 'user_login'%}">Register</a><li>
+                  <li><a class="dropdown-item" href="{%url 'user_signup'%}">Register</a><li>
                   <li><a class="dropdown-item" href="{% url 'employerpage'%}">Post internship</a><li>
                  
                   <li><a class="dropdown-item" href="{% url 'hirefreelancer'%}">Hire a freelancer</a><li>
@@ -56,7 +56,7 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                  
-                  <li><a class="dropdown-item" href="{%url 'user_login'%}">Register</a><li>
+                  <li><a class="dropdown-item" href="{%url 'user_signup'%}">Register</a><li>
                   <li><a class="dropdown-item" href="{% url 'canduser'%}">Post your skills</a><li>
                   <li><a class="dropdown-item" href="{% url 'canduser'%}">Internship Search</a><li>
                   
@@ -68,7 +68,7 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                  
-                  <li><a class="dropdown-item" href="{%url 'user_login'%}">Register</a><li>
+                  <li><a class="dropdown-item" href="{%url 'user_signup'%}">Register</a><li>
                   <li><a class="dropdown-item" href="{% url 'hirefreelancer'%}">Update your profile</a><li>
                 </ul>
               </li>
@@ -99,7 +99,7 @@ class="close" title="Close Modal">&times;</span>
     
     
       <span class="psw"> <a href="#" class="login-links">Forgot password?</a></span>
-      <span class="register">Dont have an account? <a href="{% url 'user_login'%}" class="login-links">Register</a></span>
+      <span class="register">Dont have an account? <a href="{% url 'user_signup'%}" class="login-links">Register</a></span>
       </div>
       
   </div>
