--- a/job/static/style.css
+++ b/job/static/style.css
@@ -22,12 +22,13 @@ body{
     padding: 30px 30px;
     align-items: center;
 }
-.login-heading{
+.login-heading {
     font-family: 'Poppins';
     font-size: 35;
     font-weight: 500;
-    text-align: center;
-    margin-bottom: 25px;
+    text-align: left;
+    margin-bottom: 59px;
+    color: #193555;
 }
 .login-subheading{
     font-family: 'Poppins';
@@ -51,7 +52,7 @@ input[type=text], input[type=password] {
 }
 .login-links{
     text-decoration: none;
-    color: #fff;
+    color: #0048a7;
     margin-top: 30px;
 }
 .login-links:hover{
@@ -61,7 +62,7 @@ input[type=text], input[type=password] {
 }
   .btn-login:link,
 .btn-login:visited{
-    background-color:#373737; 
+    background-color:#0048a7; 
     color: #fff;
     position: relative;
     
@@ -121,13 +122,18 @@ width: 100%;}
   
   /* Add padding to containers */
   .login-box {
-    padding: 16px;
-    margin-top: 35px;
-    margin-left: 557px;
-    width: 400px;
-    height: 500px;
-    background: linear-gradient(#afcbef,#0466e5);
-    border-radius: 15px;
+    
+    
+        padding: 11px;
+        margin-top: 13px;
+        margin-left: 559px;
+        width: 415px;
+       
+        height: 521px;
+        background: #fff;
+        border-radius: 5px;
+    
+    
   }
   
   /* The "Forgot password" text */
@@ -137,10 +143,11 @@ width: 100%;}
   }
   span.register {
     float: right;
-    top: 52px;
+    top: 45px;
     position: relative;
-    left: -44px;
-  }
+    left: -56px;
+    color: #373737;
+}
 
 
 .nav-link:link,
@@ -790,8 +797,8 @@ box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.25);
     width: 140px;
     height: 35px;
     border-radius: 20px;
-    margin-top: 20px;
-    margin-left: 5px;
+    margin-top: 13px;
+    margin-left: 11px;
     padding: 11px;
 }
 .filtered-category h1{
