--- a/job/templates/employerpage.html
+++ b/job/templates/employerpage.html
@@ -66,21 +66,21 @@
                     <h3 class="applicant-job-type">Junior Graphic Designer (Web)</h3>
                     <h3 class="applied-date">Applied date: July 20, 2022</h3>
                     </div>       
-                    <div class="clickoption1">
+                    <a href="#" class="clickoption1">
                        <img src="{%static './images/cross.png'%}">
-                    </div>  
-                    <div class="clickoption2">
+                    </a>  
+                    <a class="clickoption2">
                         <img src="{%static './images/download.png'%}">
-                     </div>  
-                     <div class="clickoption3">
+                     </a>  
+                     <a class="clickoption3">
                         <img src="{%static './images/return.png'%}">
-                     </div>  
-                     <div class="clickoption4">
+                     </a>  
+                     <a class="clickoption4">
                         <img src="{%static './images/correct.png'%}">
-                     </div>  
-                     <div class="clickoption5">
+                     </a>  
+                     <a class="clickoption5">
                         <img src="{%static './images/add.png'%}">
-                     </div>  
+                     </a>  
                  </div>
             </div>
             <div class="row">
@@ -153,9 +153,9 @@
                         <div class="clickoption4">
                            <img src="{%static './images/correct.png'%}">
                         </div>  
-                        <div class="clickoption5">
+                        <a class="clickoption5">
                            <img src="{%static './images/add.png'%}">
-                        </div>  
+                        </a>  
                           </div>
             </div>
             
@@ -182,9 +182,9 @@
                         <div class="clickoption4">
                            <img src="{%static './images/correct.png'%}">
                         </div>  
-                        <div class="clickoption5">
+                        <a class="clickoption5">
                            <img src="{%static './images/add.png'%}">
-                        </div>  
+                        </a>  
                              </div>
             </div>
             
